# fussball

./: .gitignore  README.md  alembic.ini  app.py  config.py  pyproject.toml  setup-sqlite.sh
Templates/: match_list.html  rating.html  thank_you.html
alembic/: env.py
alembic/versions/: 14e7e86bd23c_added_last_name.py  8cb434f843c9_removed_last_name.py  cc6a8244d27e_initial_schema.py
create_uppload _match/: createDB.sql
fussball/: app.py  config.py  main.py
fussball/database/: dto.py  queries.py  queries_players.py  setup.py  tables.py
fussball/elo/: elo_calculator.py  upload_match.py
fussball/pages/: __init__.py  default.py  layout.py  match.py  player.py  routes.py
fussball/pages/fragment/: arrow.py  ui_match.py  ui_player.py
