[project]
name = "fussball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash==2.8.1",
    "dash-bootstrap-components==1.4.1",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "flask==2.2.2",
    "flask-session==0.4.0",
    "jinja2==3.1.2",
    "openpyxl>=3.0.10",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly==5.13.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "setuptools>=80.9.0",
    "sqlalchemy>2.0",
    "uiwiz>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
