[project]
name = "fussball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "dash==2.8.1",
    "dash-bootstrap-components==1.4.1",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "flask==2.2.2",
    "flask-session==0.4.0",
    "greenlet>=3.2.4",
    "jinja2==3.1.2",
    "openpyxl>=3.0.10",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly==5.13.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "setuptools>=80.9.0",
    "sqlalchemy>2.0",
    "uiwiz>=0.2.5",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "testcontainers>=4.13.1",
]

[tool.ruff]
line-length=140

[tool.black]
line-length=140
